--- a/examples/main.css
+++ b/examples/main.css
@@ -151,7 +151,7 @@ body {
 	position: absolute;
     bottom: calc(50% - 150px);;
     left: calc(50%);
-    width: 35pxpx;
+    width: 35px;
     height: 35px;
     display: block;
 
