--- a/examples/main.css
+++ b/examples/main.css
@@ -146,10 +146,18 @@ body {
     display: block;
   }
 
-
+  #img-div{
+    position: absolute;
+    bottom: calc(50%);;
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 35px;
+    display: block;
+  }
+  
 .reticle_hud{ 
 	position: absolute;
-    bottom: calc(50% - 150px);;
+    bottom: calc(50%);;
     left: calc(50%);
     width: 35px;
     height: 35px;
