--- a/examples/main.css
+++ b/examples/main.css
@@ -172,79 +172,48 @@ body {
     margin-bottom: 70px !important;
   }
 
-
-  /*----  Main Style  ----*/
-#cards_landscape_wrap-2{
-	text-align: center;
-	background: #F7F7F7;
-  }
-  #cards_landscape_wrap-2 .container{
-	padding-top: 80px; 
-	padding-bottom: 100px;
-  }
-  #cards_landscape_wrap-2 a{
-	text-decoration: none;
-	outline: none;
-  }
-  #cards_landscape_wrap-2 .card-flyer {
-	border-radius: 5px;
-  }
-  #cards_landscape_wrap-2 .card-flyer .image-box{
-	background: #ffffff;
+  .card-custom {
 	overflow: hidden;
-	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
-	border-radius: 5px;
+	min-height: 450px;
+	box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
   }
- 
-  #cards_landscape_wrap-2 .card-flyer:hover .image-box img{
-	opacity: 0.7;
-	-webkit-transform:scale(1.15);
-	-moz-transform:scale(1.15);
-	-ms-transform:scale(1.15);
-	-o-transform:scale(1.15);
-	transform:scale(1.15);
+  
+  .card-custom-img {
+	height: 80%;
+	min-height: 200px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	border-color: inherit;
   }
-  #cards_landscape_wrap-2 .card-flyer .text-box{
-	text-align: center;
+  
+  /* First border-left-width setting is a fallback */
+  .card-custom-img::after {
+	position: absolute;
+	content: '';
+	top: 161px;
+	left: 0;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-top-width: 40px;
+	border-right-width: 0;
+	border-bottom-width: 0;
+	border-left-width: 545px;
+	border-left-width: calc(575px - 5vw);
+	border-top-color: transparent;
+	border-right-color: transparent;
+	border-bottom-color: transparent;
+	border-left-color: inherit;
   }
-  #cards_landscape_wrap-2 .card-flyer .text-box .text-container{
-	padding: 30px 18px;
+  
+  .card-custom-avatar img {
+	border-radius: 50%;
+	box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
+	position: absolute;
+	top: 100px;
+	left: 1.25rem;
+	width: 100px;
+	height: 100px;
   }
-  #cards_landscape_wrap-2 .card-flyer{
-	background: #FFFFFF;
-	margin-top: 50px;
-	-webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
-  }
-  #cards_landscape_wrap-2 .card-flyer:hover{
-	background: #fff;
-	box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
-	-webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-	margin-top: 50px;
-  }
-  #cards_landscape_wrap-2 .card-flyer .text-box p{
-	margin-top: 10px;
-	margin-bottom: 0px;
-	padding-bottom: 0px; 
-	font-size: 14px;
-	letter-spacing: 1px;
-	color: #000000;
-  }
-  #cards_landscape_wrap-2 .card-flyer .text-box h6{
-	margin-top: 0px;
-	margin-bottom: 4px; 
-	font-size: 18px;
-	font-weight: bold;
-	text-transform: uppercase;
-	font-family: 'Roboto Black', sans-serif;
-	letter-spacing: 1px;
-	color: #00acc1;
-  }
+  
