--- a/examples/main.css
+++ b/examples/main.css
@@ -223,6 +223,8 @@ body {
 	position: relative;
 	height: 32px;
 	width: 300px;
+	left: 50%;
+	top: 50%;
 	border-radius: 1000px;
 	background-color: #484848;
 	clip-path: inset(0 0 0 0 round 1000px);
